k8s/dhis2/dhis2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dhis2
  namespace: dhis2
spec:
  type: ClusterIP
  selector:
    app: dhis2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: debug
      port: 8081
      targetPort: 8081
    - name: jmx
      port: 9010
      targetPort: 9010
