k8s/dhis2/dhis2/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dhis2-virtual-service
  namespace: dhis2
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/mesh-gateway
  http:
  - name: gateway-to-dhis2
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dhis2.dhis2.svc.cluster.local
